--- a/css/alertify.css
+++ b/css/alertify.css
@@ -939,7 +939,7 @@
 
 
 .alertify .ajs-dialog {
-  background-color: #01c3ccb8;
+  background-color: rgba(1, 195, 204, 0.72);
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
 }
 .alertify .ajs-header {
