--- a/css/icon-select.css
+++ b/css/icon-select.css
@@ -18,7 +18,7 @@ and open the template in the editor.
 	padding: 0px;
 	width: 53px !important; /* sil */
 	height: 38px !important; /* sil */
-	background-color: #050505b5;
+	background-color: rgba(5, 5, 5, 0.71);
 	cursor:pointer;
 
 }
